# django_user_dashboard

./: .BUGFIX  .gitignore  Makefile  README.md  commands  pyproject.toml  requirements.txt
Scripts/: clean_migrations.py  update_commands.py
myproject/: settings.py  urls.py
static/css/: styles.css
templates/: base.html
templates/account/: login.html  password_reset.html  password_reset_done.html  signup.html
templates/allauth/layouts/: base.html
templates/allauth/layouts/elements/: button.html
templates/dashboard/: home.html
templates/socialaccount/: base.html  connections.html  signup.html
templates/socialaccount/snippets/: provider_list.html
users/: forms.py  models.py  tests.py  urls.py  views.py
users/management/commands/: create_random_users.py  create_real_users.py  delete_all_users.py  list_all_users.py
users/migrations/: 0001_initial.py  0002_alter_users_email.py  0003_alter_users_username.py
users/templates/users/: user_confirm_delete.html  user_create.html  user_list.html  user_update.html
users/templatetags/: dashboard_user_details_tags.py
utils/: logger.py
