[project]
name = "myproject"
version = "0.0.1"
description = "A Django project"
authors = [
    { name = "Saifeddine BEJAOUI", email = "saifeddine.bejaoui@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "crispy-bootstrap4>=2024.10",
    "cryptography>=45.0.3",
    "django>=5.0", # or the version you are using
    "django-allauth>=65.9.0",
    "django-crispy-forms>=2.4",
    "pyjwt>=2.10.1",
    "requests>=2.32.3",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-django"
]

[tool.ruff]
ignore = ["E501"]
line-length = 120
